@@ -1,3 +1,9 @@
+2007-11-13  Bastien Nocera  <hadess@hadess.net>
+
+	* src/e-contact-entry.c: (completion_match_selected_cb):
+	Update from contact-lookup-applet, so we don't error out
+	if one of the sources isn't available
+
 2007-11-12  Bastien Nocera  <hadess@hadess.net>
 
 	* src/icon.c: (tray_icon_activate_cb): Don't allow showing the
